[workspace]
members = ["crates/*"]

[workspace.dependencies]
byondapi = "0.4.4"
coarsetime = "0.1.34"
flume = "0.11.0"
eyre = "0.6.12"

[package]
name = "auxmos"
version = "2.3.0"
authors = ["Putnam <putnam3145@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["turf_processing"]
zas_hooks = []
turf_processing = []
superconductivity = ["turf_processing"]
fastmos = ["turf_processing"]
katmos = ["fastmos"]
katmos_slow_decompression = ["fastmos"]
reaction_hooks = []
plasma_fire_hook = ["reaction_hooks"]
trit_fire_hook = ["reaction_hooks"]
fusion_hook = ["reaction_hooks"]
generic_fire_hook = ["reaction_hooks"]
all_reaction_hooks = [
	"fusion_hook",
	"trit_fire_hook",
	"plasma_fire_hook",
	"generic_fire_hook",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { workspace = true }
flume = { workspace = true }
coarsetime = { workspace = true }
eyre = { workspace = true }
auxcallback = { path = "./crates/auxcallback" }
itertools = "0.12.1"
rayon = "1.10.0"
float-ord = "0.3.2"
parking_lot = "0.12.1"
fxhash = "0.2.1"
ahash = "0.8.11"
lazy_static = "1.4.0"
indexmap = { version = "2.2.6", features = ["rayon"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
hashbrown = "0.14.3"
atomic_float = "0.1.0"
petgraph = "0.6.4"
bitflags = "2.5.0"
nom = "7.1.3"
mimalloc = { version = "0.1.39", default-features = false }
simple-eyre = "0.3.1"

[dependencies.tinyvec]
version = "1.6.0"
features = ["rustc_1_57", "alloc"]

[profile.release]
lto = 'fat'
debug = true
codegen-units = 1
panic = 'abort'
