[workspace]
members = ["crates/*"]

[workspace.dependencies]
byondapi = "0.4.7"
coarsetime = "0.1.34"
flume = "0.11.0"
eyre = "0.6.12"
tracing = "0.1.40"

[package]
name = "auxmos"
version = "2.3.0"
authors = ["Putnam <putnam3145@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["turf_processing"]
zas_hooks = []
turf_processing = []
superconductivity = ["turf_processing"]
fastmos = ["turf_processing"]
katmos = ["fastmos"]
katmos_slow_decompression = ["fastmos"]
reaction_hooks = []
citadel_reactions = ["reaction_hooks"]
yogs_reactions = ["reaction_hooks"]

# Tracing will expose this application to a local port, use with care
tracy = ["dep:tracing-tracy", "dep:tracing-subscriber", "dep:tracing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { workspace = true }
flume = { workspace = true }
coarsetime = { workspace = true }
eyre = { workspace = true }
auxcallback = { path = "./crates/auxcallback" }
itertools = "0.13.0"
rayon = "1.10.0"
float-ord = "0.3.2"
parking_lot = "0.12.3"
fxhash = "0.2.1"
ahash = "0.8.11"
lazy_static = "1.4.0"
indexmap = { version = "2.2.6", features = ["rayon"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
hashbrown = "0.14.5"
atomic_float = "1.0.0"
petgraph = "0.6.5"
bitflags = "2.5.0"
nom = "7.1.3"
mimalloc = { version = "0.1.42", default-features = false }
simple-eyre = "0.3.1"

tracing = { version = "0.1.40", optional = true }
tracing-tracy = { version = "0.11.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[dependencies.tinyvec]
version = "1.6.0"
features = ["rustc_1_57", "alloc"]

[profile.release]
lto = 'fat'
debug = true
codegen-units = 1
panic = 'abort'
