[package]
name = "auxcallback"
version = "0.2.1"
authors = ["Putnam <putnam3145@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
flume = "0.10.14"
coarsetime = "0.1.23"
byondapi = { git = "https://github.com/jupyterkat/byondapi-rs", package = "byondapi" }
eyre = "0.6.8"
