[package]
name = "auxcallback"
version = "0.2.1"
authors = ["Putnam <putnam3145@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
flume = "0.11.0"
coarsetime = "0.1.34"
byondapi = "0.3.1"
eyre = "0.6.12"
