[package]
name = "auxmacros"
version = "0.1.0"
edition = "2021"
description = "Macros for auxmos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full", "parsing", "printing"]
