[package]
name = "byondapi-hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
inventory = "0.3.11"
byondapi-impl = { path = "./byondapi-impl", package = "byondapi-impl" }
